--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.20)
 
 project(APCpp-Glue)
 set(CMAKE_CXX_STANDARD 17)
@@ -13,9 +13,21 @@ add_library(APCpp-Glue SHARED apcpp-glue.cpp apcpp-glue.h Archipelago.h)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 set(ENABLE_TESTING OFF CACHE BOOL "" FORCE)
 
+set_target_properties(APCpp-Glue PROPERTIES PREFIX "")
+
+include(FetchContent)
+FetchContent_Declare(
+    APCpp
+    GIT_REPOSITORY https://github.com/RecompRando/APCpp.git
+    GIT_TAG        main
+)
+FetchContent_MakeAvailable(APCpp)
+
 if (WIN32)
-    target_link_libraries(APCpp-Glue ${CMAKE_CURRENT_SOURCE_DIR}/lib/APCpp.lib)
+    target_link_libraries(APCpp-Glue APCpp)
     target_link_libraries(APCpp-Glue ws2_32)
+elseif(APPLE)
+    target_link_libraries(APCpp-Glue APCpp)
 else()
-    target_link_libraries(APCpp-Glue ${CMAKE_CURRENT_SOURCE_DIR}/lib/libAPCpp.so)
+    target_link_libraries(APCpp-Glue APCpp)
 endif(WIN32)
